--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <title>Tetris</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <section>Start Game</section>
+      <canvas id="canvas"></canvas>
+    </div>
+    <strong>Puntuación: <span></span></strong>
     <script type="module" src="/main.js"></script>
-    <canvas id="canvas"></canvas>
   </body>
 </html>
